[package]
name    = "ffmpeg-sys"
version = "4.0.2"
build   = "build.rs"
links   = "ffmpeg"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "FFI bindings to FFmpeg"
repository  = "https://github.com/meh/rust-ffmpeg-sys"
keywords    = ["audio", "video"]

[lib]
# Disable doctests as a workaround for https://github.com/rust-lang/rust-bindgen/issues/1313
doctest = false

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.53.2"
regex   = "1.3"
